syntax = "proto3";

package forwarder;

import "github.com/networkservicemesh/networkservicemesh/controlplane/api/connection/connection.proto";
import "github.com/networkservicemesh/networkservicemesh/controlplane/api/crossconnect/crossconnect.proto";
import "ptypes/empty/empty.proto";

// Message sent by forwarder module informing NSM of any changes in its
// operations parameters or constraints
message MechanismUpdate {
  repeated connection.Mechanism remote_mechanisms = 1;
  repeated connection.Mechanism local_mechanisms = 2;
}

// Forwarder inlcudes other operations which NSM will request forwarder module
// to execute to establish connectivity requested by NSM clients.
service Forwarder {
  rpc Request(crossconnect.CrossConnect) returns (crossconnect.CrossConnect);
  rpc Close(crossconnect.CrossConnect) returns (google.protobuf.Empty);

}

service MechanismsMonitor {
    rpc MonitorMechanisms (google.protobuf.Empty) returns (stream MechanismUpdate);
}
